GNOME Bugzilla – Bug 755511
gstharness: don't crash when adding a sink-harness without h->sinkpad
Last modified: 2015-09-24 10:08:49 UTC
Created attachment 312016 [details] [review] test and fix ...
commit 64a152439c8a4b3ff493e8290bd442de02f08681 Author: Havard Graff <havard.graff@gmail.com> Date: Thu Sep 24 10:23:14 2015 +0200 harness: don't crash when adding a sink-harness without h->sinkpad https://bugzilla.gnome.org/show_bug.cgi?id=755511