harness: don't crash when adding a sink-harness without h->sinkpad

https://bugzilla.gnome.org/show_bug.cgi?id=755511